+ [gui] Navigator for the db list in the navigation panel 
+ [gui] Navigator for the table list in the content panel 
- bug #1727138 HTML not encoded (more than 1000 characters)
+ [display] Support for MySQL 5.0.37 profiling 
+ RFE #1743983 [gui] Replace $max_characters by a configurable param:
  $cfg['MaxCharactersInDisplayedSQL']
- bug #1746186 LeftLogoLink fails if set to some external site

2.10.3.0 (not yet released)

- bug #1734285 Copy database with VIEWs
- bug #1722502 DROP TABLE in export VIEW
- bug #1729027 Sorting results of VIEW browsing
- bug #1733012 Unwanted table alias in delete button
- bug #1736405 Pretty printer and HTML line breaks
- bug #1745257 Invalid DB name is still displayed
- bug #1730367 Calendar "Go" has no effect
- patch #1750500 Smaller file for favicon.ico, thanks to Thijs Kinkhorst

2.10.2.0 (2007-06-15)

+ [data] display all warnings, not only last one
- typo in fix for bug #1671813
- bug #1714908 Inserted Row Count is wrong
- bug #1712570 Deleting last record freezes
- bug #1717339 Missing header when deleting a checked column,
  thanks to Michael Keck
- bug #1717477 Warning on Query page when db is empty
- bug #1721002 db rename -> undefined cfgRelation, thanks to Jürgen Wind
- bug #1721571 CREATE database privilege not always detected,
  thanks to Gordon McNaughton
- bug #1715709 export in SQL format always includes procedures and functions
- bug #1722502 DROP TABLE in export view structure
- bug #1718787 Multi-server setup breaks Designer
- bug #1724401 Column truncation in repair table output
- patch #1726500 Wrong position of </tbody>, thanks to Jürgen Wind
- bug #1728590 Detected failing session_start fails, thanks to Jürgen Wind
- RFE #1714760 Obey ShowCreateDb on the Databases tab
- patch #1733762 Typo in message "INSERT DELAY", thanks to Victor Volkov
- patch #1730171 Dead message strLanguageFileNotFound, thanks to Victor Volkov
- patch #1731280 Avoid negative exponent in gmp_pow(), thanks to anosek

2.10.1.0 (2007-04-23)