@@ -2106,8 +2106,8 @@ $cfg['TrustedProxies'] =
     the end of the line. They are called 'MIME-type', 'Browser transformation' and
     'Transformation options'.</p>
 
-<ul><li>The field 'MIME-type' is a dropdown field. You have the options to leave that field
-        empty or to use 'auto' [this feature is not yet available]. Please note that
+    <ul><li>The field 'MIME-type' is a drop-down field. Select the MIME-type
+	that corresponds to the column's contents. Please note that
         transformations are inactive as long as no MIME-type is selected.</li>
 
     <li>The field 'Browser transformation' is a drop-down field. You can choose from a
