@@ -74,6 +74,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + RFE #1743983 [gui] Replace $max_characters by a configurable param:
   $cfg['MaxCharactersInDisplayedSQL']
 - bug #1746186 LeftLogoLink fails if set to some external site
+. [transformations]: remove "auto-detect" MIME-type that was never implemented
 
 2.10.3.0 (not yet released)
 
